chore: Rename pi occurrences [TECH-1547]